tests/reject/fail_borrow.tk
import core/io::printf

fn main() -> i32 {
    auto x# = 10
    auto &y# = &x#
    io::printf("x is %d\n", x); // Error: x is mutably borrowed by y
    return 0
}
